--- a/pom.xml
+++ b/pom.xml
@@ -211,11 +211,23 @@
             <artifactId>tess4j</artifactId>  
             <version>3.0.0</version>  
         </dependency>  -->
- <dependency>
-    <groupId>net.sourceforge.tess4j</groupId>
-    <artifactId>tess4j</artifactId>
-    <version>3.0.0</version>
-</dependency> 
+	 <dependency>
+	    <groupId>net.sourceforge.tess4j</groupId>
+	    <artifactId>tess4j</artifactId>
+	    <version>3.0.0</version>
+	</dependency> 
+	<!--zxing二维码识别 -->
+	<dependency>
+	    <groupId>com.google.zxing</groupId>
+	    <artifactId>core</artifactId>
+	    <version>3.3.0</version>
+	</dependency>
+	<!-- com.google.zxing/javase -->
+	<dependency>
+	    <groupId>com.google.zxing</groupId>
+	    <artifactId>javase</artifactId>
+	    <version>3.3.0</version>
+	</dependency>
 
 
   </dependencies>
