--- a/pom.xml
+++ b/pom.xml
@@ -228,7 +228,12 @@
 	    <artifactId>javase</artifactId>
 	    <version>3.3.0</version>
 	</dependency>
-
+	<!-- hutool工具类 -->
+	<dependency>
+	    <groupId>cn.hutool</groupId>
+	    <artifactId>hutool-all</artifactId>
+	    <version>4.6.1</version>
+	</dependency>
 
   </dependencies>
   <build>
